# Atrium

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  meson.build  patchnotes.md  pick-it-up.md  roadmap.md  spec.md
.github/workflows/: ci.yml
atrium/: Cargo.toml  build.rs
atrium-cli/: Cargo.toml
atrium-cli/src/: args.rs  clock.rs  main.rs  output.rs  template.rs  tests.rs
atrium-cli/src/import/: mod.rs  taskwarrior.rs  todoist.rs  todotxt.rs
atrium-cli/src/import/taskwarrior/: mapper.rs  round_trip_tests.rs
atrium-cli/src/import/todoist/: mapper.rs  parser.rs
atrium-cli/src/import/todotxt/: mapper.rs  parser.rs
atrium-cli/src/vtodo/: emit.rs  round_trip_tests.rs
atrium-cli/tests/fixtures/taskwarrior/: basic.json  multi.json  uda.json
atrium-cli/tests/fixtures/todotxt/: basic.txt
atrium-cli/tests/fixtures/vtodo/: nextcloud_sample.ics
atrium-core/: Cargo.toml
atrium-core/src/: backup.rs  checkbox.rs  error.rs  lib.rs  links.rs  paths.rs  quick_entry.rs  render.rs  repeat.rs  test_support.rs
atrium-core/src/db/: changes.rs  command.rs  fixtures.rs  mod.rs  read.rs  read_pool.rs  vault_hook.rs  worker.rs  worker_tests.rs
atrium-core/src/db/migrations/: 0001_initial.sql  0002_perspectives.sql  0003_repeat_mode.sql  0004_area_color.sql  0005_perspective_renderer.sql  0006_task_last_reviewed_at.sql  0007_task_orig_keyword.sql  0008_task_deadline_warn_days.sql  0009_task_clock_entry.sql  0010_quick_entry_template.sql  0011_task_scheduled_time.sql  0012_task_reminder_at.sql  0013_task_clock_entry_timestamps.sql  0014_task_extra_properties.sql  0015_area_default_review_interval.sql  0016_task_dependency.sql  0017_task_template.sql  0018_task_reminder_fired.sql  0019_board_card_position.sql  0020_swatch_kanagawa.sql  mod.rs
atrium-core/src/db/read/: clock.rs  counts.rs  mod.rs  search.rs  templates.rs
atrium-core/src/domain/: mod.rs  scheduled.rs
atrium-core/src/search/: ast.rs  eval.rs  lex.rs  mod.rs  parse.rs  tests.rs
atrium-core/src/sync/: atomic.rs  json.rs  mod.rs  vault_writer.rs
atrium-core/src/sync/org/: emit.rs  import.rs  mod.rs  parse.rs  write.rs
atrium-core/tests/: mode_flip_snapshot.rs  org_roundtrip.rs
atrium-core/tests/fixtures/org/: custom_keywords.org  deep_nesting.org
atrium-import/: Cargo.toml
atrium-import/src/: lib.rs
atrium-import/src/import/: taskwarrior.rs  todoist.rs
atrium-import/src/import/taskwarrior/: mapper.rs  parser.rs  round_trip_tests.rs
atrium-import/src/import/todoist/: recurrence.rs
atrium-import/src/import/todotxt/: round_trip_tests.rs
atrium-import/src/vtodo/: mapper.rs  mod.rs  parser.rs
atrium-import/tests/fixtures/taskwarrior/: recurring.json
atrium-import/tests/fixtures/todoist/: home.csv
atrium-import/tests/fixtures/todotxt/: mixed.txt
atrium-import/tests/fixtures/vtodo/: basic.ics  lossy.ics  multi.ics
atrium-inline/: Cargo.toml
atrium-inline/src/: completions.rs  lib.rs
atrium-org/: Cargo.toml
atrium-org/src/: lib.rs  rrule_cookie.rs  self_write.rs  sidecar.rs  vault_watcher.rs  vault_writer.rs
atrium-org/src/org/: emit.rs  import.rs  mod.rs  parse.rs  write.rs
atrium-org/tests/: org_roundtrip.rs  vault_watcher_integration.rs  worker_org_integration.rs
atrium-org/tests/fixtures/org/: kitchen_sink.org  project_metadata.org  rrule_patterns.org  unicode.org
atrium-search/: Cargo.toml
atrium-search/src/: ast.rs  dates.rs  eval.rs  lib.rs  parse.rs  rank.rs  sql_translate.rs  tests.rs
atrium/src/: error.rs  i18n.rs  main.rs  reminders.rs
atrium/src/debug/: mod.rs
atrium/src/quickentry/: mod.rs  modal.rs  parser.rs
atrium/src/ui/: about.rs  agenda.rs  board.rs  calendar.rs  clamp.rs  dialogs.rs  filter.rs  forecast.rs  import_dialog.rs  inline_complete.rs  inspector.rs  inspector_pane.rs  logbook.rs  mod.rs  preferences.rs  review.rs  rows.rs  shortcuts.rs  status_page.rs  tag_editor.rs  task_list.rs  task_object.rs  theme.rs  typography.rs  window.rs  window_tests.rs
atrium/src/ui/inspector_pane/: fields.rs  mod.rs  tests.rs
atrium/src/ui/window/: actions.rs  drop.rs  lists.rs  mod.rs  onboarding.rs  search.rs  shell.rs  sidebar.rs  tasks.rs  tests.rs  views.rs  widgets.rs
book/: book.toml
book/src/: SUMMARY.md  accessibility.md  gtd-patterns.md  import-export.md  introduction.md  keymap.md  modes.md  org-vault.md  performance.md  quick-entry.md  schema.md  search.md
data/: io.github.virinvictus.atrium.desktop  io.github.virinvictus.atrium.gschema.xml  io.github.virinvictus.atrium.metainfo.xml  io.github.virinvictus.atrium.metainfo.xml.in  io.github.virinvictus.atrium.yml  shortcuts.ui  style.css  window.ui
data/fonts/: README.md
demos/: README.md
demos/showcase/: Q3-Launch.org
demos/showcase/Personal/: Reading-list.org
demos/showcase/Work/: On-call-rotation.org
docs/: accessibility.md  gtd-patterns.md  keymap.md  org-roundtrip.md  perf-baseline.md  regression.md  schema.md
po/: LINGUAS  POTFILES  atrium.pot  en.po  meson.build
scripts/: perf.sh  regression.sh
