# Meson build wrapper for Atrium.
#
# Thin orchestration layer around `cargo build --release`. The Rust
# workspace at `atrium/` (binary) and `atrium-core/` (headless library)
# is the source of truth — meson handles the GNOME-shaped install
# layout (binary into $bindir, GSettings schema into
# $datadir/glib-2.0/schemas, fonts and stylesheet into
# $datadir/atrium/) so the project ships cleanly through Flatpak and
# any distro that expects a meson buildsystem.
#
# Use:
#   meson setup builddir --prefix=/usr
#   meson compile -C builddir
#   meson install -C builddir
#
# Phase 3 lands the application shell — desktop entry / AppStream
# metainfo / icons join in Phase 8.

project(
  'atrium',
  'rust',
  # Single source of truth — the VERSION file (matched by the workspace
  # Cargo.toml per the release discipline).
  version: files('VERSION'),
  meson_version: '>= 0.59.0',
  license: 'MIT',
)

application_id = 'io.github.virinvictus.atrium'
prefix = get_option('prefix')
bindir = prefix / get_option('bindir')
datadir = prefix / get_option('datadir')
appdir = datadir / 'atrium'
localedir = prefix / get_option('localedir')

# Localisation (Phase 20, v0.47.0). The gettext package name doubles as
# the runtime text domain bound in atrium/src/i18n.rs and the
# `domain="atrium"` attribute on the GtkBuilder interfaces.
i18n = import('i18n')
gnome = import('gnome')
gettext_package = meson.project_name()

cargo = find_program('cargo')

# Cargo build target. `build_always_stale` lets cargo handle its own
# incremental logic without meson tracking the Rust source tree.
# ATRIUM_DATADIR points cargo's build script at the install-time data
# location so the binary's runtime resolution lands on the right path.
cargo_options = ['--manifest-path', meson.project_source_root() / 'Cargo.toml']
cargo_options += ['--release']
cargo_options += ['--package', 'atrium']

cargo_build = custom_target(
  'cargo-build',
  build_by_default: true,
  build_always_stale: true,
  output: 'atrium',
  console: true,
  install: true,
  install_dir: bindir,
  command: [
    'env',
    'CARGO_TARGET_DIR=' + meson.project_build_root() / 'cargo-target',
    'ATRIUM_DATADIR=' + appdir,
    'ATRIUM_LOCALEDIR=' + localedir,
    cargo, 'build', cargo_options,
    '&&', 'cp', meson.project_build_root() / 'cargo-target' / 'release' / 'atrium', '@OUTPUT@',
  ],
)

# GSettings schema. install_data drops the .xml into the canonical
# schema directory; meson.add_install_script invokes
# glib-compile-schemas at install time so end users don't need a
# post-install hook.
install_data(
  'data/' + application_id + '.gschema.xml',
  install_dir: datadir / 'glib-2.0' / 'schemas',
)

# v0.47.0: gnome.post_install replaces the bare add_install_script —
# the old form passed the absolute $datadir path and broke any
# DESTDIR-staged install (it only ever worked because Flatpak installs
# without DESTDIR). post_install skips itself under DESTDIR, which is
# what packaging expects.
gnome.post_install(
  glib_compile_schemas: true,
)

# Desktop entry — picked up by GNOME shell and software centers.
# merge_file folds any translated Name/Comment/Keywords from po/ into
# the installed file.
i18n.merge_file(
  input: 'data' / application_id + '.desktop.in',
  output: application_id + '.desktop',
  type: 'desktop',
  po_dir: 'po',
  install: true,
  install_dir: datadir / 'applications',
)

# AppStream metainfo — picked up by gnome-software / KDE Discover /
# Flathub validators for name, summary, screenshots, releases. The
# release-notes history carries translate="no" per entry so it stays
# out of the translation catalogue.
i18n.merge_file(
  input: 'data' / application_id + '.metainfo.xml.in',
  output: application_id + '.metainfo.xml',
  type: 'xml',
  po_dir: 'po',
  install: true,
  install_dir: datadir / 'metainfo',
)

# Translation catalogue — po/ carries POTFILES, LINGUAS, atrium.pot,
# and the per-language .po files; i18n.gettext compiles + installs the
# .mo files under $localedir.
subdir('po')

# Scalable hicolor app icon. The PNG ladder is generated by the
# Flatpak build; native installs serve the SVG directly.
install_data(
  'data/icons/hicolor/scalable/apps/' + application_id + '.svg',
  install_dir: datadir / 'icons' / 'hicolor' / 'scalable' / 'apps',
)

# Bundled fonts. Variable TTFs land at $datadir/atrium/fonts/ where the
# typography module's exe-relative resolver finds them. License files
# travel alongside.
install_subdir(
  'data/fonts',
  install_dir: appdir,
)

# Base stylesheet. Goes next to the fonts so the runtime resolver finds
# both at the same install root.
install_data(
  'data/style.css',
  install_dir: appdir,
)

summary({
  'prefix': prefix,
  'bindir': bindir,
  'datadir': datadir,
  'appdir': appdir,
  'localedir': localedir,
  'application id': application_id,
}, section: 'Configuration')
