[package]
name = "atrium-cli"
description = "Headless Atrium CLI — exercise the search engine and read the database from the shell. The data and search layers are GUI-free by design; this binary makes them grep-able and pipe-able for testing, scripting, and the eventual TUI."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "atrium-cli"
path = "src/main.rs"

[dependencies]
atrium-core = { path = "../atrium-core" }
atrium-search = { path = "../atrium-search" }

# Date arithmetic (today's date for the EvalContext, deadline / schedule
# parsing for output).
chrono.workspace = true

# Direct read-only access to the SQLite store. We don't use the
# worker channel here — atrium-cli is single-shot and short-lived,
# so we open one read-only connection per invocation.
rusqlite.workspace = true

# Structured output. serde_json is already in the workspace dep
# graph; the CLI uses it for the `--json` formatter.
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
atrium-core = { path = "../atrium-core", features = ["test-support"] }
