[package]
name = "atrium-cli"
description = "Headless Atrium CLI — exercise the search engine and read the database from the shell. The data and search layers are GUI-free by design; this binary makes them grep-able and pipe-able for testing, scripting, and the eventual TUI."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "atrium-cli"
path = "src/main.rs"

[dependencies]
atrium-core = { path = "../atrium-core" }
atrium-search = { path = "../atrium-search" }
# v0.9.0 — Phase 16 Org/JSON import + export commands moved out
# of atrium-core::sync::org into atrium-org. atrium-cli pulls the
# new crate in directly so the `import org` / `export org` paths
# keep working.
atrium-org = { path = "../atrium-org" }
# v0.13.0 — `quick_entry` parser lifted into its own crate so the
# CLI's `capture` subcommand and the GTK binary share the parser
# without dragging it through atrium-core.
atrium-inline = { path = "../atrium-inline" }

# Date arithmetic (today's date for the EvalContext, deadline / schedule
# parsing for output).
chrono.workspace = true

# Direct read-only access to the SQLite store for read commands.
# Write commands (add, complete, delete) use the existing
# atrium-core worker pattern instead — that's what serialises
# writes when Atrium's GUI is also running.
rusqlite.workspace = true

# Worker dispatch lives behind tokio's mpsc channels; the CLI
# builds a current-thread runtime, spawns the worker, blocks on
# one async call, and shuts down. No GTK main loop needed.
tokio.workspace = true

# Structured output. serde_json is already in the workspace dep
# graph; the CLI uses it for the `--json` formatter.
serde.workspace = true
serde_json.workspace = true

# Phase 18 (v0.12.0): deterministic v5 task UUIDs in the Todoist
# mapper so re-imports onto the same project keep stable IDs.
# Already a workspace dep (atrium-core uses v4); the CLI just
# needs its own entry to call into uuid::new_v5.
uuid.workspace = true

# Phase 18 (v0.12.0): typed errors for the Todoist mapper layer
# (MapError) — same shape as atrium-core / atrium-org error
# enums. Already a workspace dep.
thiserror.workspace = true

[dev-dependencies]
atrium-core = { path = "../atrium-core", features = ["test-support"] }
