[package]
name = "atrium-core"
description = "Headless core (database worker, domain types, paths, errors) for the Atrium task manager."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Phase 1: storage + serialization land with the schema migration.
rusqlite.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

# Phase 1: UUID v4 generation. Per design call, sign-off granted in
# Phase 1 plan — the alternative was hand-rolling RFC 4122 generation
# in pure SQL, uglier and not constructable from Rust.
uuid.workspace = true

# Phase 2: tokio runtime for the single-writer worker task.
tokio.workspace = true

# Phase 15: RFC 5545 RRULE parser + iterator. Powers repeat-rule
# storage, regenerate-on-complete, and Org-mode round-trip.
rrule.workspace = true

# v0.4.2 — `regex` no longer lives here; the search engine that
# uses it was extracted to the sibling `atrium-search` crate.
# atrium-core stays focused on the data layer.

[features]
# v0.2.0 — opt-in test helpers for downstream test crates (the
# `atrium` binary's UI tests, in particular). Exposes `Task::dummy`
# and friends so each test crate doesn't have to hand-roll its own
# placeholder constructor and pay attention to every new schema
# column.
test-support = []
