[package]
name = "atrium"
description = "Native GNOME task manager — Things 3 clarity, OmniFocus depth, mode-switched."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
default-run = "atrium"

[dependencies]
atrium-core = { path = "../atrium-core" }

# Phase 0 set.
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Phase 3: GTK + libadwaita application shell, tokio runtime for the
# worker. `gtk` re-exports glib / gio / pango.
gtk.workspace = true
adw.workspace = true
tokio.workspace = true

# Phase 4: chrono for date formatting in row labels and `Today` filter.
chrono.workspace = true

[dev-dependencies]
# v0.2.0 — opt into atrium-core's test-only dummy-task helpers so
# UI tests don't have to hand-roll a fresh literal every time the
# Task struct grows a column.
atrium-core = { path = "../atrium-core", features = ["test-support"] }
