[package]
name = "atrium"
description = "Native GNOME task manager — Things 3 clarity, OmniFocus depth, mode-switched."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
default-run = "atrium"

[dependencies]
atrium-core = { path = "../atrium-core" }
# v0.4.2 — the search expression engine ships as its own workspace
# crate so it can be exercised independently and reused from a
# future TUI / atriumd / search server.
atrium-search = { path = "../atrium-search" }
# v0.9.0 — Phase 16 Org projection (parser, emitter, importer,
# vault writer task) lives in its own crate so atrium-core stays
# Org-agnostic. The GTK binary uses `spawn_org_vault` to wire the
# vault hook through the worker.
atrium-org = { path = "../atrium-org" }
# v0.13.0 — inline-syntax parser (`#tag` / `@today` / `@weekday`
# / `!priority`) lives in its own crate so the GTK binary, the
# CLI, and the post-1.0 TUI all speak the same vocabulary.
atrium-inline = { path = "../atrium-inline" }

# Phase 0 set.
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Phase 3: GTK + libadwaita application shell, tokio runtime for the
# worker. `gtk` re-exports glib / gio / pango.
gtk.workspace = true
adw.workspace = true
tokio.workspace = true

# Phase 4: chrono for date formatting in row labels and `Today` filter.
chrono.workspace = true

[dev-dependencies]
# v0.2.0 — opt into atrium-core's test-only dummy-task helpers so
# UI tests don't have to hand-roll a fresh literal every time the
# Task struct grows a column.
atrium-core = { path = "../atrium-core", features = ["test-support"] }
